# abadia-del-crimen-amstrad-cpc-disassembly

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: AI_PATHFINDING.md  BLOCK_EXTRACTION_SUMMARY.md  GAME_LOOP.md  GRAPHICS_ENGINE.md  MEMORY_BANK_ANALYSIS.md  SCRIPTING_SYSTEM.md  SESSION_HANDOVER.md  SPRITE_EXTRACTION_COMPLETE.md  SPRITE_EXTRACTION_SUMMARY.md  SPRITE_FORMAT_ANALYSIS.md  game_code_analysis.md
pirated_spanish_CPC_game_files/: ABADIA.BAS  file_id.diz
src/abadia/: __init__.py  abbey_architect.py  abbey_blocks_library.py  block_renderer.py  cpc_palette.py  decompile_scripts.py  extract_block_scripts.py  extract_sprites.py  extract_sprites_corrected.py  extract_tiles.py  graphics.py  guillermo.py  input.py  interpreter.py  main.py  mirror.py  visualize_palette.py
src/abadia/resources/: README.txt
tests/: test_main.py
translated_english_files/: 0 - abadia_del_crimen_disassembled_CPC_Amstrad_game_code.asm  1 - game_debugger_memory_map.txt  2 - game_debugger.asm  3 - game_disk_content_map.txt  4 - game_memory_map.txt  5 - game_file_rom_maps.txt  6 - cracked_game_loader_routine.asm  7 - original_game_boot_loader.asm
translated_english_files/translated_abadia_chunks/: chunk_aa  chunk_ab  chunk_ac  chunk_ad  chunk_ae  chunk_af  chunk_ag  chunk_ah  chunk_ai  chunk_aj  chunk_ak  chunk_al  chunk_am  chunk_an  chunk_ao  chunk_ap  chunk_aq  chunk_ar  chunk_as  chunk_at  chunk_au  chunk_av  chunk_aw  chunk_ax  chunk_ay  chunk_az  chunk_ba  chunk_bb  chunk_bc  chunk_bd
