[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abadia-del-crimen"
version = "0.1.0"
description = "Tools and disassembly analysis for Abadía del Crimen"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "click",  # Example dependency for CLI tools
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/abadia"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
addopts = "--cov=abadia --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
